# ChangeLog for mail-filter/maildirproc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Dec 2010; James Rowe <jnrowe@gmail.com> maildirproc-0.5.0.ebuild:
  Keyworded amd64.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> maildirproc-0.4.3.ebuild:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

  01 Nov 2010; James Rowe <jnrowe@gmail.com> maildirproc-0.5.0.ebuild:
  Block installation of maildirproc-python2, due to clashes.

*maildirproc-0.5.0 (01 Nov 2010)

  01 Nov 2010; James Rowe <jnrowe@gmail.com> +maildirproc-0.5.0.ebuild:
  Version bump [222].

  19 Sep 2010; James Rowe <jnrowe@gmail.com> maildirproc-0.4.3.ebuild:
  Keyworded x86.

  19 Sep 2010; James Rowe <jnrowe@gmail.com> maildirproc-0.4.3.ebuild:
  Keyworded amd64.

  17 Aug 2010; James Rowe <jnrowe@gmail.com> maildirproc-0.4.3.ebuild:
  Keyworded ~x86.

*maildirproc-0.4.3 (17 Aug 2010)

  17 Aug 2010; James Rowe <jnrowe@gmail.com> +maildirproc-0.4.3.ebuild,
  +metadata.xml:
  Initial ebuild, by me [fe5].
