@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST maildirproc-0.4.3.tar.gz 21731 RMD160 a8d3591182c79f3af527602d3b45364e4a6a765f SHA1 86655d61707c6889d44f7b92dff84b4084a7807a SHA256 acf89fe90aad4c20513d88f3441722bc6955a83d38d8aa27bd85c80929962854
 DIST maildirproc-0.5.0.tar.bz2 20066 RMD160 37ecf2ffc2bd29d7a230aae5bd133d0c2dd8433c SHA1 5220bddc011841a7a3a8238b84336e64a164b2cf SHA256 b55e8c607f94b1fc9a9e6124d59d1fe1530c9884fb0dad42090992c0515ecf59
-EBUILD maildirproc-0.4.3.ebuild 1025 RMD160 58e6a870b41ff5271cfd818a1bca249229b5dad0 SHA1 cc6b63d79d4f11d7c23e8dc45e1257448f05c9a8 SHA256 ba827cbe9e1dc2e43a9608ae8ded8c652d523ee58ab5dbe90eec17a02d0f88f6
-EBUILD maildirproc-0.5.0.ebuild 1053 RMD160 6d2906506b83fa69dba94e40723acb3510b15226 SHA1 16910614f8863a0ae6d1474ab2c7f0a3edf297d2 SHA256 ca0dba1c9a549997bd28bae2c1ce0864245fe7c201552a7a3b2dfd82789a8d52
-MISC ChangeLog 1036 RMD160 22bfda820e5c25561f15ce067642479b06a4b8f2 SHA1 3c6a7d3ae9535611cf7c27a9ab7ad99df82e02a8 SHA256 a1b0211afb2d170634e10550ddb7e733d3d4900756da8e5e1e4353af508a35bb
+EBUILD maildirproc-0.5.0.ebuild 1052 RMD160 a6485f029e58285b471c7de2c82da90ad10adc65 SHA1 f3c653f3de82f72a30e3d5e30a46143e1a8d5529 SHA256 aef308a59544f9f801ddd5e82511eef1b39c48fe69e67b6e73644de8485b3153
+MISC ChangeLog 1154 RMD160 92e4ff1b71752ec6b502d97b122e5733bcae72bb SHA1 75035312a346270c52937c1c6437fee5e116dd33 SHA256 60f82a85fcce17aabba3bd8f94bbe21503107fd677ca69da60d3b8220c2a9773
 MISC metadata.xml 752 RMD160 dc17cfd49602a00ac700d43ab113947c98299659 SHA1 8d629e703afc586ffbd6065774a4865632ea6219 SHA256 5a118b0a697ad49265aa18223c9b5359e9b128759e6b086853a5cc8c7c143e37
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkz5RncACgkQzJrj3cAXR0k2dACeIDOWIRjYfAe1la5pDuV4y7yM
-zDQAnA2EbPNnnnuNOEJ4QixzgLKGEG8D
-=J6rl
+iEYEARECAAYFAkz6YvAACgkQzJrj3cAXR0mk1gCdHSOaoIZlMGdI2hTlat6o/Q2l
+1U0An0MWVQIcWEqm6vqtA5qH5kjoMQkm
+=JUSj
 -----END PGP SIGNATURE-----
