@@ -16,7 +16,7 @@ SRC_URI="http://joel.rosdahl.net/maildirproc/releases/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="examples"
 
 DEPEND="!mail-filter/maildirproc"
