@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20091230 || ( =dev-lang/python-3.2* =dev-lang/python-3.1* =dev-lang/python-3.0* =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
->=app-admin/eselect-python-20091230 || ( =dev-lang/python-3.2* =dev-lang/python-3.1* =dev-lang/python-3.0* =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
-0
-https://github.com/downloads/JNRowe/misc-overlay/maildirproc-0.4.3.tar.gz
-
-http://joel.rosdahl.net/maildirproc/
-GPL-2
-maildir processor using Python as its configuration language
-amd64 x86
-distutils multilib python toolchain-funcs
-examples
-
-
-
-3
-
-compile install postinst postrm prepare
-
-
-
-
-
