@@ -1,4 +1,3 @@
-REM 2010-12-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 mail-filter/maildirproc-0.5.0 %a
 REM 2010-12-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 mail-filter/maildirproc-python2-0.5.0 %a
 REM 2010-12-03 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/dexml-0.3.7 %a
 REM 2010-12-03 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/dexml-0.3.7 %a
