@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Dec 2010; James Rowe <jnrowe@gmail.com> -maildirproc-0.4.3.ebuild,
+  maildirproc-0.5.0.ebuild:
+  Keyworded x86.
+
   03 Dec 2010; James Rowe <jnrowe@gmail.com> maildirproc-0.5.0.ebuild:
   Keyworded amd64.
 
